Fixed hero text on smaller devices

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -93,7 +93,8 @@
 @mixin hero-heading {
     font-family: $font-family;
     font-weight: 700;
-    font-size: 3.5rem; // 56px
+    // font-size: 3.5rem; // 56px
+    font-size: clamp(3rem, 6vw, 3.5rem); 
     line-height: 3.625rem; // 58px
     letter-spacing: 0.125rem; // 2px
     text-transform: uppercase;
